--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -227,5 +227,41 @@ textarea {
 
 footer {
     display: flex;
-    
+    margin-left: 55px;
+    margin-right:55px;
+    justify-content: space-between;
+    color: black;
+    padding: 25px;
+}
+footer a{
+    text-decoration: none;
+    color: black;
+}
+footer .sub-flex-1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1rem;
+}
+footer .sub-flex-2 {
+    display: flex;
+    align-items: center;
+}
+.sub-flex-1 h5, .sub-flex-1 a{
+    padding-right: 20.5px;
+    font-weight: 500;
+}
+.sub-flex-2 i, .sub-flex-2 a {
+    padding-right: 15px;
+}
+.sub-flex-1 a:hover, .sub-flex-2 a:hover, .sub-flex-2 i:hover {
+    color: grey;
+    text-decoration: underline 1px grey;
+}
+.ron, .english {
+    text-decoration: underline;
+    font-weight: 500;
+}
+.fa-facebook-f {
+    margin-left: 35px;
 }
