--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -166,7 +166,7 @@ textarea {
 .row-img-text h5 {
       font-weight: 300;
 }
-.accomodations {
+/* .accomodations {
     margin-top: 85px;
     margin-left: 80px;
     margin-right: 80px;
@@ -189,7 +189,7 @@ textarea {
 }
 .house-item {
     cursor: pointer;
-}
+} */
 
 .section-3 {
     padding-top: 40px;
